<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaNewton">

    <RadioGroup
        android:id="@+id/newton_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/newton_b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equa_o_simplificada" />

        <RadioButton
            android:id="@+id/newton_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/diferen_as_dividida" />

        <RadioButton
            android:id="@+id/newton_b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/equa_o_completa" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/newton_status"
        android:layout_below="@id/newton_radio_group"
        android:layout_centerHorizontal="true"
        android:padding="5dp">

        <ScrollView
            android:id="@+id/newton_scrol_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/newton_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="#000"
                android:textSize="20sp" />

        </ScrollView>

        <ScrollView
            android:id="@+id/newton_scrol_result_complet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/newton_results_completo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                />

        </ScrollView>


        <ListView
            android:id="@+id/newton_lay_difdiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <TextView
        android:id="@+id/newton_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/newton_progres_layout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/interpolar_na_forma_de" />

    <RelativeLayout
        android:id="@+id/newton_progres_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/newton_progres_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="15%" />

        <ProgressBar
            android:id="@+id/newton_progres_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <Button
        android:id="@+id/newton_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/voltar" />


</RelativeLayout>